samples/_failures_safe/1761424929_9ebe10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2afc6d65.c: In function ‘main’:
./samples/SAFE/__tmp_2afc6d65.c:156:9: error: expected expression at end of input
  156 |         free_matrix(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_2afc6d65.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2afc6d65.c:156:9: error: expected declaration or statement at end of input
